Add jenkins file : fix script error